# backend/docs/swagger.json
@@ -81,7 +81,7 @@
             "get": {
                 "security": [
                     {
-                        "BearerAuth": []
+                        "Bearer": []
                     }
                 ],
                 "description": "Retrieve all comments",
@@ -177,6 +177,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Update a comment",
                 "consumes": [
                     "application/json"
@@ -510,6 +515,50 @@
                         "BearerAuth": []
                     }
                 ],
+                "description": "Update an existing journal entry",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Journal"
+                ],
+                "summary": "Update Journal",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Journal ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Updated Journal Data",
+                        "name": "journal",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/web.JournalUpdate"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/web.JournalResponse"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Delete a journal entry",
                 "consumes": [
                     "application/json"
@@ -552,6 +601,31 @@
                             "items": {
                                 "$ref": "#/definitions/web.UserResponse"
                             }
+                        }
+                    }
+                }
+            }
+        },
+        "/users/me": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Retrieve the details of the currently authenticated user based on the JWT token provided",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Get current user",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/web.UserResponse"
                         }
                     }
                 }
@@ -617,7 +691,6 @@
                         "description": "User Update Request",
                         "name": "user",
                         "in": "body",
-                        "required": true,
                         "schema": {
                             "$ref": "#/definitions/web.UserUpdate"
                         }
@@ -914,8 +987,7 @@
         "web.JournalUpdate": {
             "type": "object",
             "required": [
-                "id",
-                "userID"
+                "id"
             ],
             "properties": {
                 "content": {
@@ -993,6 +1065,9 @@
                 "created_at": {
                     "type": "string"
                 },
+                "email": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "integer"
                 },
@@ -1006,9 +1081,6 @@
         },
         "web.UserUpdate": {
             "type": "object",
-            "required": [
-                "id"
-            ],
             "properties": {
                 "email": {
                     "type": "string"
@@ -1018,18 +1090,21 @@
                 },
                 "name": {
                     "type": "string",
-                    "maxLength": 16,
-                    "minLength": 4
+                    "maxLength": 16
                 },
                 "password": {
                     "type": "string",
-                    "minLength": 8
+                    "maxLength": 32
+                },
+                "userID": {
+                    "type": "integer"
                 }
             }
         }
     },
     "securityDefinitions": {
         "BearerAuth": {
+            "description": "Provide your JWT token here. Example: \"Bearer {token}\"",
             "type": "apiKey",
             "name": "Authorization",
             "in": "header"
