# backend/internal/handler/user.go
@@ -7,6 +7,7 @@ import (
 	"github.com/aternity/zense/internal/entity/web"
 	"github.com/aternity/zense/internal/service"
 	"github.com/go-playground/validator/v10"
+	"github.com/golang-jwt/jwt/v5"
 	"github.com/jackc/pgx/v5/pgconn"
 	"github.com/labstack/echo/v4"
 	"gorm.io/gorm"
@@ -15,6 +16,7 @@ import (
 type UserHandler interface {
 	Login(c echo.Context) error
 	Register(c echo.Context) error
+	FindMe(c echo.Context) error
 	FindAll(c echo.Context) error
 	FindByID(c echo.Context) error
 	Update(c echo.Context) error
@@ -33,14 +35,14 @@ func NewUserHandler(service service.UserService, validator *validator.Validate) 
 	}
 }
 
-//	@Summary		User login
-//	@Description	Authenticate a user and generate a JWT token
-//	@Tags			Users
-//	@Accept			json
-//	@Produce		json
-//	@Param			user	body		web.UserLogin	true	"User Login Request"
-//	@Success		200		{object}	web.UserAuth
-//	@Router			/auth/login [post]
+// @Summary		User login
+// @Description	Authenticate a user and generate a JWT token
+// @Tags			Users
+// @Accept			json
+// @Produce		json
+// @Param			user	body		web.UserLogin	true	"User Login Request"
+// @Success		200		{object}	web.UserAuth
+// @Router			/auth/login [post]
 func (u *userHandler) Login(ctx echo.Context) error {
 	req := new(web.UserLogin)
 	if err := ctx.Bind(req); err != nil {
@@ -63,14 +65,14 @@ func (u *userHandler) Login(ctx echo.Context) error {
 	return ctx.JSON(http.StatusOK, data)
 }
 
-//	@Summary		Register a new user
-//	@Description	Register a new user with email and password
-//	@Tags			Users
-//	@Accept			json
-//	@Produce		json
-//	@Param			user	body		web.UserRegister	true	"User Register Request"
-//	@Success		201		{object}	web.UserResponse
-//	@Router			/auth/register [post]
+// @Summary		Register a new user
+// @Description	Register a new user with email and password
+// @Tags			Users
+// @Accept			json
+// @Produce		json
+// @Param			user	body		web.UserRegister	true	"User Register Request"
+// @Success		201		{object}	web.UserResponse
+// @Router			/auth/register [post]
 func (u *userHandler) Register(ctx echo.Context) error {
 	req := new(web.UserRegister)
 	if err := ctx.Bind(req); err != nil {
@@ -96,12 +98,38 @@ func (u *userHandler) Register(ctx echo.Context) error {
 	return ctx.JSON(http.StatusCreated, data)
 }
 
-//	@Summary		Get all users
-//	@Description	Retrieve a list of all users
-//	@Tags			Users
-//	@Produce		json
-//	@Success		200	{array}	web.UserResponse
-//	@Router			/users [get]
+// @Summary		Get current user
+// @Description	Retrieve the details of the currently authenticated user based on the JWT token provided
+// @Tags			Users
+// @Produce		json
+// @Success		200	{object}	web.UserResponse
+// @Security		BearerAuth
+// @Router			/users/me [get]
+func (u *userHandler) FindMe(ctx echo.Context) error {
+	req := new(web.UserFindMe)
+
+	user := ctx.Get("user").(*jwt.Token)
+	claims := user.Claims.(jwt.MapClaims)
+	req.ID = uint(claims["user_id"].(float64))
+
+	if err := u.validator.Struct(req); err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, err.Error())
+	}
+
+	data, err := u.service.FindMe(*req)
+	if err != nil {
+		return err
+	}
+
+	return ctx.JSON(http.StatusOK, data)
+}
+
+// @Summary		Get all users
+// @Description	Retrieve a list of all users
+// @Tags			Users
+// @Produce		json
+// @Success		200	{array}	web.UserResponse
+// @Router			/users [get]
 func (u *userHandler) FindAll(ctx echo.Context) error {
 	data, err := u.service.FindAll()
 	if err != nil {
@@ -115,14 +143,14 @@ func (u *userHandler) FindAll(ctx echo.Context) error {
 	return ctx.JSON(http.StatusOK, data)
 }
 
-//	@Summary		Get user by ID
-//	@Description	Retrieve a user by their ID
-//	@Tags			Users
-//	@Accept			json
-//	@Produce		json
-//	@Param			id	path		int	true	"User ID"
-//	@Success		200	{object}	web.UserResponse
-//	@Router			/users/{id} [get]
+// @Summary		Get user by ID
+// @Description	Retrieve a user by their ID
+// @Tags			Users
+// @Accept			json
+// @Produce		json
+// @Param			id	path		int	true	"User ID"
+// @Success		200	{object}	web.UserResponse
+// @Router			/users/{id} [get]
 func (u *userHandler) FindByID(ctx echo.Context) error {
 	req := new(web.UserFindByID)
 	if err := ctx.Bind(req); err != nil {
@@ -145,22 +173,25 @@ func (u *userHandler) FindByID(ctx echo.Context) error {
 	return ctx.JSON(http.StatusOK, data)
 }
 
-//	@Summary		Update a user
-//	@Description	Update a user's information
-//	@Tags			Users
-//	@Accept			json
-//	@Produce		json
-//	@Param			id		path		int				true	"User ID"
-//	@Param			user	body		web.UserUpdate	true	"User Update Request"
-//	@Success		200		{object}	web.UserResponse
-//	@Security		BearerAuth
-//	@Router			/users/{id} [put]
+// @Summary		Update a user
+// @Description	Update a user's information
+// @Tags			Users
+// @Accept			json
+// @Produce		json
+// @Param			id		path		int				true	"User ID"
+// @Param			user	body		web.UserUpdate	false	"User Update Request"
+// @Success		200		{object}	web.UserResponse
+// @Security		BearerAuth
+// @Router			/users/{id} [put]
 func (u *userHandler) Update(ctx echo.Context) error {
 	req := new(web.UserUpdate)
 	if err := ctx.Bind(req); err != nil {
 		return echo.NewHTTPError(http.StatusBadRequest, err.Error())
-
 	}
+
+	user := ctx.Get("user").(*jwt.Token)
+	claims := user.Claims.(jwt.MapClaims)
+	req.UserID = uint(claims["user_id"].(float64))
 
 	if err := u.validator.Struct(req); err != nil {
 		return echo.NewHTTPError(http.StatusBadRequest, err.Error())
@@ -178,20 +209,24 @@ func (u *userHandler) Update(ctx echo.Context) error {
 	return ctx.JSON(http.StatusOK, data)
 }
 
-//	@Summary		Delete a user
-//	@Description	Delete a user by their ID
-//	@Tags			Users
-//	@Accept			json
-//	@Produce		json
-//	@Param			id	path	int	true	"User ID"
-//	@Success		204
-//	@Security		BearerAuth
-//	@Router			/users/{id} [delete]
+// @Summary		Delete a user
+// @Description	Delete a user by their ID
+// @Tags			Users
+// @Accept			json
+// @Produce		json
+// @Param			id	path	int	true	"User ID"
+// @Success		204
+// @Security		BearerAuth
+// @Router			/users/{id} [delete]
 func (u *userHandler) Delete(ctx echo.Context) error {
 	req := new(web.UserDelete)
 	if err := ctx.Bind(req); err != nil {
 		return echo.NewHTTPError(http.StatusBadRequest, err.Error())
 	}
+
+	user := ctx.Get("user").(*jwt.Token)
+	claims := user.Claims.(jwt.MapClaims)
+	req.UserID = uint(claims["user_id"].(float64))
 
 	if err := u.validator.Struct(req); err != nil {
 		return echo.NewHTTPError(http.StatusBadRequest, err.Error())
